resolve: 리뷰 반영